@@ -1,6 +1,7 @@
 package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import javax.validation.Valid;
 import javax.validation.constraints.Positive;
@@ -11,9 +12,9 @@ import ru.practicum.shareit.item.comment.dto.CommentRestCommand;
 import ru.practicum.shareit.item.dto.ItemRestCommand;
 import ru.practicum.shareit.item.dto.ItemRestView;
 
-import java.util.Collections;
 import java.util.List;
 
+@Validated
 @RestController
 @RequestMapping("/items")
 @RequiredArgsConstructor
@@ -21,15 +22,17 @@ public class ItemController {
     private final ItemService itemService;
 
     @PostMapping
-    public ItemRestView save(@RequestHeader(value = "X-Sharer-User-Id") @Positive long userId,
+    public ItemRestView save(@RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId,
                              @RequestBody @Valid ItemRestCommand itemRestCommand) {
         return itemService.save(userId, itemRestCommand);
     }
 
     @GetMapping
     public List<ItemRestView> getAll(
-            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId) {
-        return itemService.getAll(userId);
+            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId,
+            @RequestParam(name = "from", defaultValue = "0") @PositiveOrZero int from,
+            @RequestParam(name = "size", defaultValue = "10") @PositiveOrZero int size) {
+        return itemService.getAll(userId, from, size).toList();
     }
 
     @GetMapping("{item_id}")
@@ -41,14 +44,14 @@ public class ItemController {
 
     @PatchMapping("{item_id}")
     public ItemRestView update(
-            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @Positive long userId,
+            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId,
             @PathVariable(name = "item_id") @Positive long itemId,
             @RequestBody ItemRestCommand itemRestCommand) {
         return itemService.update(userId, itemId, itemRestCommand);
     }
 
     @DeleteMapping
-    public void deleteAll(@RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @Positive long userId) {
+    public void deleteAll(@RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId) {
         itemService.deleteAll(userId);
     }
 
@@ -61,18 +64,21 @@ public class ItemController {
 
     @GetMapping("/search")
     public List<ItemRestView> searchInItemsNamesAndDescriptionByText(
-            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @Positive long userId,
-            @RequestParam(name = "text", defaultValue = "") String text) {
+            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId,
+            @RequestParam(name = "text", defaultValue = "") String text,
+            @RequestParam(name = "from", defaultValue = "0") @PositiveOrZero int from,
+            @RequestParam(name = "size", defaultValue = "10") @PositiveOrZero int size) {
         if (text.isBlank()) {
-            return Collections.emptyList();
+            return List.of();
         }
-        return itemService.searchInNamesAndDescriptionsByText(userId, text);
+        return itemService.searchInNamesAndDescriptionsByText(userId, text, from, size).toList();
     }
 
     @PostMapping("{item_id}/comment")
-    public Comment saveNewComment(@RequestHeader(value = "X-Sharer-User-Id") @Positive long userId,
-                                  @PathVariable(name = "item_id") @Positive long itemId,
-                                  @RequestBody @Valid CommentRestCommand commentRestCommand) {
+    public Comment saveNewComment(
+            @RequestHeader(value = "X-Sharer-User-Id", defaultValue = "0") @PositiveOrZero long userId,
+            @PathVariable(name = "item_id") @Positive long itemId,
+            @RequestBody @Valid CommentRestCommand commentRestCommand) {
         return itemService.addCommentToItem(userId, itemId, commentRestCommand);
     }
 
